# studiomdl_v2

./: CMakeLists.txt
libs/appframework/: AppSystemGroup.cpp  CMakeLists.txt  VguiMatSysApp.cpp  WinApp.cpp  cocoamgr.mm  glmrendererinfo_osx.mm  materialsystem2app.cpp  matsysapp.cpp  posixapp.cpp  sdlmgr.cpp  vguimaterialsystem2app.cpp
libs/bitmap/: CMakeLists.txt  ImageByteSwap.cpp  bitmap.cpp  colorconversion.cpp  floatbitmap.cpp  floatbitmap2.cpp  floatbitmap3.cpp  floatbitmap4.cpp  floatbitmap_bilateralfilter.cpp  floatcubemap.cpp  imageformat.cpp  psd.cpp  psheet.cpp  resample.cpp  texturepacker.cpp  tgaloader.cpp  tgawriter.cpp
libs/bonesetup/: CMakeLists.txt  bone_accessor.cpp  bone_constraints.cpp  bone_decode.cpp  bone_ik.cpp  bone_setup.cpp  bone_utils.cpp  bone_utils.h
libs/datamodel/: CMakeLists.txt  DmElementFramework.cpp  clipboardmanager.cpp  datamodel.cpp  datamodel.h  dependencygraph.cpp  dmattribute.cpp  dmconnect.cpp  dmelement.cpp  dmelementfactoryhelper.cpp  dmserializerkeyvalues.cpp
libs/dmeutils/: CMakeLists.txt  dmanimutils.cpp  dmmeshutils.cpp
libs/dmserializers/: CMakeLists.txt  dmserializers.cpp  importmks.cpp
libs/fbxutils/: CMakeLists.txt  dmfbxserializer.cpp
libs/filesystem/: CMakeLists.txt  QueuedLoader.cpp  XboxInstaller.cpp  basefilesystem.cpp  basefilesystem.h  basefilesystemasync.cpp  filesystem_async.cpp  filesystem_stdio.cpp  filesystem_steam.cpp  filesystemasync.cpp  filetracker.cpp  linux_support.cpp
libs/interfaces/: CMakeLists.txt  interfaces.cpp
libs/materialsystem/: CColorCorrection.cpp  CMakeLists.txt  CMaterialSubRect.cpp  MaterialSystemUtil.cpp  SubdMgr.cpp  checkmaterials.cpp  cmaterial.cpp  cmaterial_queuefriendly.cpp  cmaterialdict.cpp  cmaterialsystem.cpp  cmaterialsystem.h  cmaterialsystem_ps3fonts.cpp  cmaterialvar.cpp  cmatlightmaps.cpp  cmatnullrendercontext.cpp  cmatpaintmaps.cpp  cmatqueuedrendercontext.cpp  cmatqueuedrendercontext.h  cmatrendercontext.cpp  cmatrendercontext.h  colorspace.cpp  composite_texture.cpp  composite_texture.h  ctexture.cpp  custom_material.cpp  custom_material.h  ifont.h  imagepacker.cpp  imagepacker.h  imatrendercontextinternal.h  mat_stub.cpp  materialsystem_cvar.cpp  materialsystem_global.cpp  morph.cpp  occlusionquerymgr.cpp  pch_materialsystem.h  shader_dll_verify.cpp  shadersystem.cpp  shaderutil_ps3nonvirt.h  texturemanager.cpp  (+1 more)
libs/mathlib/: 3dnow.cpp  CMakeLists.txt  IceKey.cpp  anorms.cpp  box_buoyancy.cpp  bumpvects.cpp  camera.cpp  color_conversion.cpp  eigen.cpp  expressioncalculator.cpp  halton.cpp  imagequant.cpp  kdop.cpp  lightdesc.cpp  mathlib_base.cpp  polyhedron.cpp  powsse.cpp  quantize.cpp  randsse.cpp  simdvectormatrix.cpp  simplex.cpp  sparse_convolution_noise.cpp  spherical.cpp  sse.cpp  sseconst.cpp  ssenoise.cpp  transform.cpp  vmatrix.cpp  volumeculler.cpp
libs/mdlobjects/: CMakeLists.txt  authphysfx.cpp  dmeanimationassemblycommand.cpp  dmeanimblocksize.cpp  dmeanimcmd.cpp  dmeassemblycommand.cpp  dmeasset.cpp  dmebbox.cpp  dmeblankbodypart.cpp  dmebodygroup.cpp  dmebodygrouplist.cpp  dmebodypart.cpp  dmeboneflexdriver.cpp  dmebonemask.cpp  dmebonemasklist.cpp  dmeboneweight.cpp  dmecollisionjoints.cpp  dmecollisionmodel.cpp  dmedefinebone.cpp  dmedefinebonelist.cpp  dmeelementgroup.cpp  dmeeyeball.cpp  dmeeyeballglobals.cpp  dmeeyelid.cpp  dmehitbox.cpp  dmehitboxset.cpp  dmehitboxsetlist.cpp  dmeik.cpp  dmeincludemodellist.cpp  dmejigglebone.cpp  dmelod.cpp  dmelodlist.cpp  dmematerialgroup.cpp  dmematerialgrouplist.cpp  dmematsysroot.cpp  dmemdllist.cpp  dmemotioncontrol.cpp  dmemouth.cpp  dmeposeparameter.cpp  dmeposeparameterlist.cpp  (+5 more)
libs/meshutils/: CMakeLists.txt  convexhull.cpp  mesh.cpp  simplify.cpp  uvparam.cpp
libs/movieobjects/: CMakeLists.txt  dmeanimationlist.cpp  dmeanimationset.cpp  dmeattachment.cpp  dmeattributereference.cpp  dmeaxissystem.cpp  dmebookmark.cpp  dmecamera.cpp  dmechannel.cpp  dmeclip.cpp  dmecombinationoperator.cpp  dmeconnectionoperator.cpp  dmecontrolgroup.cpp  dmedag.cpp  dmedccmakefile.cpp  dmedrawsettings.cpp  dmeeditortypedictionary.cpp  dmeexporttags.cpp  dmeexpressionoperator.cpp  dmefaceset.cpp  dmeflexrules.cpp  dmegamemodel.cpp  dmeinput.cpp  dmejoint.cpp  dmekeyboardinput.cpp  dmelight.cpp  dmelog.cpp  dmemakefile.cpp  dmematerial.cpp  dmematerialoverlayfxclip.cpp  dmemdl.cpp  dmemdlmakefile.cpp  dmemesh.cpp  dmemodel.cpp  dmemorphoperator.cpp  dmemouseinput.cpp  dmeoperator.cpp  dmeoverlay.cpp  dmepackoperators.cpp  dmeparticlesystemdefinition.cpp  (+19 more)
libs/nvtristriplib/: CMakeLists.txt  nvtristripobjects.h  vertexcache.cpp
libs/resourcefile/: CMakeLists.txt  resourcedictionary.cpp  resourcefile.cpp  resourceintrospection.cpp  resourcestream.cpp
libs/tier0/: CMakeLists.txt  PMELib.cpp  assert_dialog.cpp  commandline.cpp  cpu.cpp  dbg.cpp  dynfunction.cpp  etwprof.cpp  fasttimer.cpp  logging.cpp  mem.cpp  mem_helpers.cpp  mem_impl_type.h  memstd.cpp  memstd.h  memvirt.cpp  pch_tier0.h  platform.cpp  pme.cpp  stackstats.cpp  stacktools.cpp  threadtools.cpp  tier0_strtools.h  tslist.cpp  vprof.cpp
libs/tier1/: CMakeLists.txt  bitbuf.cpp  byteswap.cpp  characterset.cpp  checksum_crc.cpp  checksum_md5.cpp  circularbuffer.cpp  commandbuffer.cpp  convar.cpp  datamanager.cpp  exprevaluator.cpp  fileio.cpp  generichash.cpp  interface.cpp  keyvalues.cpp  kvpacker.cpp  lzmaDecoder.cpp  lzss.cpp  mempool.cpp  memstack.cpp  sparsematrix.cpp  stringpool.cpp  strtools.cpp  tier1.cpp  timeutils.cpp  undiff.cpp  uniqueid.cpp  utlbuffer.cpp  utlbufferutil.cpp  utlsoacontainer.cpp  utlstring.cpp  utlstringtoken.cpp  utlsymbol.cpp
libs/tier2/: CMakeLists.txt  beamsegdraw.cpp  defaultfilesystem.cpp  fileutils.cpp  interval.cpp  keybindings.cpp  meshutils.cpp  renderutils.cpp  riff.cpp  schemaclassbinding.cpp  socketcreator.cpp  soundutils.cpp  tier2.cpp  tokenreader.cpp  util_init.cpp  utlstreambuffer.cpp  vconfig.cpp
libs/tier3/: CMakeLists.txt  choreoutils.cpp  mdlutils.cpp  scenetokenprocessor.cpp  studiohdrstub.cpp  tier3.cpp
libs/utils/: CMakeLists.txt  bsplib.cpp  cmdlib.cpp  collisionutils.cpp  studio.cpp  (+6 more)
(+223 files in other folders)
