cmake_minimum_required(VERSION 3.22)
project(interfaces)

set(CMAKE_CXX_STANDARD 14)
if (CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(PLATFORM_DEFINES COMPILER_MSVC64 COMPILER_MSVC)
elseif (CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(PLATFORM_DEFINES COMPILER_MSVC32 COMPILER_MSVC _X86_)
endif ()

add_library(interfaces interfaces.cpp)
target_include_directories(interfaces PUBLIC ../../include)
target_include_directories(interfaces PRIVATE ../../include/interfaces)
target_compile_definitions(interfaces PRIVATE)
target_link_libraries(interfaces PRIVATE tier0)
